# im_sample_algorithm

./: Gemfile  README.md  delete.me
IMTurn/: calcPathShorteningTurnPointTTG.m  main_closedLoopTurn_pathShortening.m
IMTurn/Data/: KDEN_IM_Turn_Long.mat  KDEN_IM_Turn_Short.mat  KLAS_IM_Turn_Long.mat  KLAS_IM_Turn_Short.mat  KPHX_IM_Turn_Long.mat  KPHX_IM_Turn_Short.mat  LongRouteResults.mat  LongRoutes.txt  ShortRouteResults.mat  ShortRoutes.txt  wptDatabase.txt
IntervalManagement/: .gitignore  AchieveObserver.cpp  AchievePointCalcs.cpp  AircraftState.cpp  CMakeLists.txt  ClosestPointMetric.cpp  CrossTrackObserver.cpp  FIMAlgorithmAdapter.cpp  FIMAlgorithmDataWriter.cpp  FIMAlgorithmInitializer.cpp  FIMConfiguration.cpp  FIMSpeedLimiter.cpp  FIMSpeedQuantizer.cpp  IMAchieve.cpp  IMAlgorithm.cpp  IMAlgorithmLoader.cpp  IMClearance.cpp  IMClearanceLoader.cpp  IMDistBasedAchieve.cpp  IMKinematicAchieve.cpp  IMKinematicDistBasedMaintain.cpp  IMKinematicTimeBasedMaintain.cpp  IMMaintain.cpp  IMTimeBasedAchieve.cpp  IMTimeBasedAchieveMutableASG.cpp  IMUtils.cpp  InternalObserver.cpp  InternalObserverScenarioWriter.cpp  KinematicDescent4DPredictor.cpp  KinematicTrajectoryPredictor.cpp  MOPSPredictedWindEvaluatorVersion1.cpp  MOPSPredictedWindEvaluatorVersion2.cpp  MaintainMetric.cpp  MergePointMetric.cpp  NMObserver.cpp  NMObserverEntry.cpp  PredictionFileKinematic.cpp  Statistics.cpp  TestVectorSpeedControl.cpp  TrueDistances.cpp  (+2 more)
docs/: README.md  _config.yml  appendix_url_mapping.md  bada_usage_guide.md  citations.md  coming_soon.md  context.md  coordinate_systems.md  dev_talk.md  entry_points.md  ifpi.md  im_clearance_types.md  imturn.md  kinematic_prediction.md  missing_code.md  navdb.md  traffic_data.md  where_is_im_turn.md  which_algorithm.md
docs/_data/: navigation.yml
(+72 files in other folders)
